# comsys

./: .bazelrc  .gitignore  WORKSPACE
filesystem/unixv6/: .inode.c.swp  BUILD  CMakeLists.txt  Makefile  directory.c  diskimageaccess.c  file.c  ino.h  inode.c  pathname.c  unixfilesystem.c  unixfilesystem.h
filesystem/unixv6/.hg/: dirstate  hgrc  undo.desc
filesystem/unixv6/.hg/cache/: branchheads  tags
filesystem/unixv6/.hg/store/: 00changelog.i  00manifest.i  undo
filesystem/unixv6/.hg/store/data/: _makefile.i  file.c.i  ino.h.i  inode.c.i
filesystem/unixv6/testdisks/: testdisks
